chore: 설정파일 및 주석 수정