@@ -1,3 +1,9 @@
 bootJar {
 	archiveFileName = 'company-service.jar'
 }
+// Java 21 + Mockito 조합에서 Mockito가 동적으로 agent를 로드하는 방식이
+// 추후 JDK에서 막힐거라는 경고문 발생 (테스트시)
+// 해당 부분 추가로 방지
+tasks.withType(Test).configureEach {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
